migration to jupyterbook

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -378,6 +378,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -385,7 +386,7 @@
     }
    },
    "source": [
-    "# A real program\n",
+    "## A real program\n",
     "\n",
     "By now you may be thinking that this does not look like programming at all. Where is the program?\n",
     "Actually there is no program here. A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database).\n"
@@ -495,6 +496,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -502,7 +504,7 @@
     }
    },
    "source": [
-    "# Key concepts\n",
+    "## Key concepts\n",
     "\n",
     "- **(computer) program**: a computer program is a sequence or set of instructions in a programming language that a computer (or other device) can execute or interpret.\n",
     "- **flow control**: programming elements that control the flow of a program. Flow control elements are used for iteration and conditional execution.\n",
