--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -1003,6 +1003,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1010,7 +1011,7 @@
     }
    },
    "source": [
-    "# Key concepts\n",
+    "## Key concepts\n",
     "\n",
     "- **collection**: variable that is composed of multiple values i.e. `list`, `set` etc.\n",
     "- **class**: A blueprint for creating objects of that type. Classes define data and -mainly- behaviour in the form of methods. These methods may be blueprint-scoped (class methods) or instance-scoped (object methods).\n",
