--- a/03_flow_control.ipynb
+++ b/03_flow_control.ipynb
@@ -33,6 +33,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fef28b59",
    "metadata": {
@@ -41,7 +42,7 @@
     }
    },
    "source": [
-    "# Code blocks\n",
+    "## Code blocks\n",
     "At the heart of iteration lies the concept of code blocks: one or multiple statements that belong together and are executed multiple times, or optionally, depending on the flow control element.  \n",
     "\n",
     "A code block is defined by **indentation** (4 spaces usually), and in flow control it always follows an iteration or decision statement ending with a colon:\n",
