--- a/08_exception_mechanism.ipynb
+++ b/08_exception_mechanism.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "82cb42e3",
    "metadata": {
@@ -9,7 +10,7 @@
     }
    },
    "source": [
-    "# 08 The exception mechanism"
+    "# The exception mechanism"
    ]
   },
   {
