--- a/09_regex.ipynb
+++ b/09_regex.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4177a8d0",
    "metadata": {
@@ -9,7 +10,7 @@
     }
    },
    "source": [
-    "# 09 Regular expressions and the `re` module\n"
+    "# Regular expressions\n"
    ]
   },
   {
